# log-analyzer2

./: .gitignore  README.md  logger.py  predictor.py  preproccessor.py  pyproject.toml
models/: rf_model.pkl
src/: log_scanner.py  logger.py  main.py  predictor.py  preproccessor.py
