[tool.poetry]
name = "log-analyzer-v2"
version = "0.1.0"
description = ""
authors = ["Aleksey Eliseev <alekseyeliseev@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
joblib = "^1.4.2"
pandas = "^2.2.3"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
scipy = "^1.14.1"
six = "^1.16.0"
threadpoolctl = "^3.5.0"
tzdata = "^2024.2"
scikit-learn = "1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
